@@ -1,0 +1,70 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!--// $Id$ //-->
+<html><head>
+<meta name="GENERATOR" content="LMS {$layout.lmsv}">
+<meta http-equiv="Content-Language" content="{$LANGDEFS.$_ui_language.html}">
+<meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_ui_language.html}">
+<title>::: LMS :{if $layout.pagetitle neq ""} {$layout.pagetitle} :{/if}::</title>
+<link href="img/style.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="img/common.js"> </script>
+{if $js}<script type="text/javascript">
+<!--
+	{$js}
+//-->
+</script>{/if}
+{if $part eq "main"}
+<script type="text/javascript" language="JavaScript" src="img/OpenLayers/OpenLayers.js"></script>
+<script type="text/javascript" language="JavaScript" src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+<script type="text/javascript" language="JavaScript">
+	var map;
+
+	function click(e)
+	{
+		var lonlat = map.getLonLatFromViewPortPx(e.xy)
+			.transform(map.getProjectionObject(), new OpenLayers.Projection("EPSG:4326"));
+		sendvalue(targetfield1, lonlat.lon);
+		sendvalue(targetfield2, lonlat.lat);
+		OpenLayers.Event.stop(e);
+	}
+
+	function init()
+	{
+		map = new OpenLayers.Map("map");
+		var osmap = new OpenLayers.Layer.OSM();
+		var gmap = new OpenLayers.Layer.Google("Google Maps");
+		map.addLayer(gmap);
+		map.addLayer(osmap);
+
+		map.addControl(new OpenLayers.Control.ScaleLine());
+		map.addControl(new OpenLayers.Control.LayerSwitcher());
+		map.addControl(new OpenLayers.Control.MousePosition({ displayProjection: new OpenLayers.Projection("EPSG:4326") }));
+
+		map.events.register("click", map, click);
+
+		if (!map.getCenter()) map.zoomToMaxExtent();
+	}
+</script>
+{/if}
+</head>
+{if ! $part}
+<frameset frameborder="0" framespacing="0" ROWS="30,*">
+	<frame scrolling="no" frameborder="0" marginheight="0" marginwidth="0" name="cal" noresize src="?m=choosegpscoords&p=top">
+	<frame scrolling="always" frameborder="0" marginheight="0" marginwidth="0" name="m" noresize src="?m=choosegpscoords&p=main">
+</frameset>
+{/if}
+{if $part eq "main"}
+<body onload="init()">
+<div id="map" class="smallmap"></div>
+</body>
+{/if}
+{if $part eq "top"}
+<body>
+<table cellpadding="5" width="100%">
+	<tr>
+		<td class="fall dark" align="center">
+			<B>{t}Select gps coordinates:{/t}</B>
+		</td>
+	</tr>
+</table>
+{/if}
+</html>
