@@ -90,8 +90,9 @@
 		<TD WIDTH="1%" NOWRAP>
 			<B>{t}GPS latitude:{/t}</B>
 		</TD>
-		<TD WIDTH="98%">
+		<TD WIDTH="98%" NOWRAP>
 			<INPUT id="latitude" TYPE="text" NAME="netdev[latitude]" VALUE="{$netdev.latitude}" {tip text="Enter device latitude (optional)" trigger="latitude"}>
+			<a href="javascript: void(0);" onClick="return gpscoordschoosewin(document.netdevadd.elements['netdev[latitude]'], document.netdevadd.elements['netdev[longitude]']);" {tip text="Click to select gps coordinates from map"}>&raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
 	<TR>
@@ -101,8 +102,9 @@
 		<TD WIDTH="1%" NOWRAP>
 			<B>{t}GPS longitude:{/t}</B>
 		</TD>
-		<TD WIDTH="98%">
+		<TD WIDTH="98%" NOWRAP>
 			<INPUT id="longitude" TYPE="text" NAME="netdev[longitude]" VALUE="{$netdev.longitude}" {tip text="Enter device longitude (optional)" trigger="longitude"}>
+			<a href="javascript: void(0);" onClick="return gpscoordschoosewin(document.netdevadd.elements['netdev[latitude]'], document.netdevadd.elements['netdev[longitude]']);" {tip text="Click to select gps coordinates from map"}>&raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
 {if $_config.phpui.radius|chkconfig}
