@@ -42,6 +42,7 @@ version ? (????-??-??):
   - gps coordinates support for nodes and netdevices [chilan]
   - netdevmap: first version of OpenStreetMap map type support thanks to Grzegorz Cichowski [chilan]
   - netdevmap: show info about netdevices for OpenStreetMap map type [chilan]
+  - selection of gps coordinates from popup map [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
